# Shiopa-Backend-Fast-API

./: Pipfile  aerich.ini  db.sqlite3  pyproject.toml
migrations/models/: 0_20210826171309_init.sql  0_20210826192819_init.sql  0_20210826214351_init.sql  1_20210826174844_update.sql  1_20210826214741_update.sql  2_20210826220221_update.sql
shiopa_backend/: main.py
shiopa_backend/apps/orders/: models.py
shiopa_backend/apps/products/: models.py
shiopa_backend/apps/store/: models.py
shiopa_backend/apps/users/: models.py
